--- a/frontend/github-app/package.json
+++ b/frontend/github-app/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config src/proxy.conf.json",
     "start:dev": "ng serve -c development",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
