--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "(cd frontend/github-app && npm install); (cd backend/github-api && npm install);"
+    "start": "concurrently \"cd frontend/github-app && npm run start\" \"cd backend/github-api && npm run start\"",
+    "postinstall": "(npm install -g @angular/cli); (npm install -g @nestjs/cli); (cd frontend/github-app && npm install); (cd backend/github-api && npm install);"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/radocode/github-app/issues"
   },
-  "homepage": "https://github.com/radocode/github-app#readme"
+  "homepage": "https://github.com/radocode/github-app#readme",
+  "dependencies": {
+    "concurrently": "^7.3.0"
+  }
 }
