--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently \"cd frontend/github-app && npm run start\" \"cd backend/github-api && npm run start\"",
-    "postinstall": "(npm install -g @angular/cli); (npm install -g @nestjs/cli); (cd frontend/github-app && npm install); (cd backend/github-api && npm install);"
+    "start": "concurrently \"cd frontend/github-app && npm run start\" \"cd backend/github-api && npm run start:prod\"",
+    "postinstall": "(npm install -g @angular/cli); (npm install -g @nestjs/cli); (cd frontend/github-app && npm install); (cd backend/github-api && npm install && npm run build);"
   },
   "repository": {
     "type": "git",
